change in image links

--- a/code/index.html
+++ b/code/index.html
@@ -6,13 +6,12 @@
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:wght@200&display=swap">
-    <link rel="images">
   </head>
   <body>
     <header>
       <nav class="top-nav">
         <a class="logo" href="#">
-          <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\istockphoto-1278931900-170667a.jpg" 
+          <img src="images\istockphoto-1278931900-170667a.jpg" 
           alt="sofa-logo">
           <p>NewsRoom</p>
         </a>
@@ -28,7 +27,7 @@
 
     <section class="big-news">
       <a href="#">
-        <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\freddie-marriage-vSchPA-YA_A-unsplash.jpg"
+        <img src="images\freddie-marriage-vSchPA-YA_A-unsplash.jpg"
         alt="home-office">
         <div class="big-news-text">
           <p2>2022-01-21</p2>
@@ -44,42 +43,42 @@
     <section class="smaller-news">
       <article>
         <a href="#">
-          <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\tania-miron-umYxSxMncT4-unsplash.jpg"
+          <img src="images\tania-miron-umYxSxMncT4-unsplash.jpg"
           alt="plants">
           <h5>Plants are it</h5>
         </a>
       </article>
       <article>
         <a href="#">
-          <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\bilal-mansuri-bCZkj7jEDBk-unsplash.jpg"
+          <img src="images\bilal-mansuri-bCZkj7jEDBk-unsplash.jpg"
           alt="bathtub">
           <h5>Get inspired by these bathtub spots</h5>
         </a>
       </article>
       <article>
         <a href="#">
-          <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\jessica-sosey-YABErdnJPGc-unsplash.jpg"
+          <img src="images\jessica-sosey-YABErdnJPGc-unsplash.jpg"
           alt="kitchen">
           <h5>Rustic kitchen, of course</h5>
         </a>
       </article>
       <article>
         <a href="#">
-          <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\sarah-khan-8MJqNBSymRE-unsplash.jpg"
+          <img src="images\sarah-khan-8MJqNBSymRE-unsplash.jpg"
           alt="black-and-white">
           <h5>Trending color palettes</h5>
         </a>
       </article>
       <article>
         <a href="#">
-          <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\emine-dermenci-MAt6QxHEXeQ-unsplash.jpg"
+          <img src="images\emine-dermenci-MAt6QxHEXeQ-unsplash.jpg"
           alt="view">
         <h5>A cabin with a view</h5>
         </a>
       </article>
       <article>
       <a href="#">
-        <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\francesco-la-corte-lICAVYUOBSw-unsplash.jpg"
+        <img src="images\francesco-la-corte-lICAVYUOBSw-unsplash.jpg"
         alt="hotel">
         <h5>5 appealing hotels to visit</h5>
     </article>
