added h2 and styling

--- a/code/index.html
+++ b/code/index.html
@@ -36,18 +36,35 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. In, hic culpa. A facilis, libero nemo similique aliquam deleniti. 
      dignissimos deserunt et, nulla at consequatur similique repellendus praesentium iure ipsa.</p></div>
       <!-- The other news  -->
-  <div class="cell-3">
+  
+      <div class="cell-3">
+    <h2>Latest trends in Paris this year post Corona</h2>
     <p>The third box should have some text to and maybe a photo ?? Whaddya think? Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Earum repellat maxime sit, sint ut quo ipsa alias aspernatur vel aperiam cupiditate magni aut odit. Rerum sint molestiae sit ut voluptate.</p></div>
-  <div class="cell-4"><p>The third box should have some text to and maybe a photo ?? Whaddya think? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+ 
+       <div class="cell-4">
+         <h2>Latest trends in Paris this year post Corona</h2>
+          <p>The third box should have some text to and maybe a photo ?? Whaddya think? Lorem ipsum dolor sit amet consectetur adipisicing elit.
     Earum repellat maxime sit, sint ut quo ipsa alias aspernatur vel aperiam cupiditate magni aut odit. Rerum sint molestiae sit ut voluptate.</p></div>
-  <div class="cell-5"><p>The third box should have some text to and maybe a photo ?? Whaddya think? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+  
+  <div class="cell-5"><p>
+    <h2>Latest trends in Paris this year post Corona</h2>
+    <p>The third box should have some text to and maybe a photo ?? Whaddya think? Lorem ipsum dolor sit amet consectetur adipisicing elit.
     Earum repellat maxime sit, sint ut quo ipsa alias aspernatur vel aperiam cupiditate magni aut odit. Rerum sint molestiae sit ut voluptate.</p></div>
-  <div class="cell-6"><p>The third box should have some text to and maybe a photo ?? Whaddya think? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+
+  <div class="cell-6">
+    <h2>Latest trends in Paris this year post Corona</h2>
+    <p>The third box should have some text to and maybe a photo ?? Whaddya think? Lorem ipsum dolor sit amet consectetur adipisicing elit.
     Earum repellat maxime sit, sint ut quo ipsa alias aspernatur vel aperiam cupiditate magni aut odit. Rerum sint molestiae sit ut voluptate.</p></div>
-    <div class="cell-7"><p>The third box should have some text to and maybe a photo ?? Whaddya think? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+
+    <div class="cell-7">
+      <h2>Latest trends in Paris this year post Corona</h2>
+      <p>The third box should have some text to and maybe a photo ?? Whaddya think? Lorem ipsum dolor sit amet consectetur adipisicing elit.
       Earum repellat maxime sit, sint ut quo ipsa alias aspernatur vel aperiam cupiditate magni aut odit. Rerum sint molestiae sit ut voluptate.</p></div>
-      <div class="cell-8"><p>The very last of the boxes, number 8, that is. Im so proud of myself..</p></div>
+     
+     <div class="cell-8">
+       <h2>Latest trends in Paris this year post Corona</h2>
+       <p>The very last of the boxes, number 8, that is. Im so proud of myself..</p></div>
   </secion>
     
   </body>
