Change margin and padding to pixels

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
   <header class="header">
     <h1 class="header__heading">TN <span class="block">❈</span></h1>
+    <h1 class="header__heading header__heading-desktop">❈ TechNews</h1>
     <nav class="navbar">
       <ul class="navbar__list">
         <li class="navbar__item">
