updated all requirement

--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
 <!--menu-->
 <header class="mobilemenu">
 	<div class="dropdownlogo" style="float:left;">
-      	<img class="item1" src="../img/logo.jpg" alt="logo"/>
+      	<img class="item1" src="img/logo.jpg" alt="logo"/>
       	<div class="item2">Visit St.Martin</div>
 	</div>
 	<div class="dropdown" style="float:right;">
@@ -27,7 +27,7 @@
 </div>
 </header>
 <header class="tabanddesktopmenu">
-    <img class="item1" src="../img/logo.jpg" alt="logo"/>
+    <img class="item1" src="img/logo.jpg" alt="logo"/>
     <div class="item2">Visit St.Martin</div>
     <div class="item3"><a href="#home">Home</a></div>
     <div class="item4"><a href="#hotel">List of Hotel</a></div>
@@ -38,7 +38,7 @@
 <!--Main text upper part-->
     <section class="big-news">
       <div class="polaroid">
-        <img src="../img/travel5.jpg" alt="coconut tree"/>
+        <img src="img/travel5.jpg" alt="coconut tree"/>
         <p>Coconut tree</p>
       </div>
       <div class="big-news-text">
@@ -58,7 +58,7 @@
     <section class="mainText">
       <div class="childOne">
         <div class="polaroid">
-          <img src="../img/coral island.jpg" alt="Coral island"/>
+          <img src="img/coral island.jpg" alt="Coral island"/>
           <p>Coral island</p>
         </div>
         <div>
@@ -78,7 +78,7 @@
       </div>
       <div class="childTwo">
         <div class="polaroid">
-          <img src="../img/fish.jpg" alt="fish fry"/>
+          <img src="img/fish.jpg" alt="fish fry"/>
           <p>Fresh fish</p>
         </div>
         <div>
@@ -91,7 +91,7 @@
 
       <div class="childOne">
         <div class="polaroid">
-          <img src="../img/sunset.jpg" alt="Sunset"/>
+          <img src="img/sunset.jpg" alt="Sunset"/>
           <p>Senset</p>
         </div>
         <div>
@@ -104,7 +104,7 @@
 
       <div class="childOne">
         <div class="polaroid">
-          <img src="../img/hotel.jpg" alt="hotel"/>
+          <img src="img/hotel.jpg" alt="hotel"/>
           <p>Hotel & Resorts</p>
         </div>
         <div>
@@ -117,20 +117,6 @@
       </div>
     </section>
     
-
-    <script>
-      function myFunction() {
-        var x = document.getElementById("myLinks");
-        if (x.style.display === "block") {
-          x.style.display = "none";
-        } else {
-          x.style.display = "block";
-        }
-      }
-      </script>
-
-
-
   </body>
 </html>
 
