added links to social media

--- a/code/index.html
+++ b/code/index.html
@@ -27,9 +27,15 @@
     <a href="#">Contact</a>
 
     <div class="icon-box">
+      <a href="https://www.facebook.com/">
     <img class="icon1" src="./social-media-icons/facebook_icon.png"/>  
+    </a>
+    <a href="https://www.instagram.com/">
     <img class="icon2" src="./social-media-icons/instagram_icon.png"/>
+  </a>
+  <a href="https://www.youtube.com/">
     <img class="icon3" src="./social-media-icons/youtube_icon.png"/>
+</a>
     
     </section> 
     </header>
