now responsive somewhat

--- a/code/index.html
+++ b/code/index.html
@@ -41,7 +41,9 @@
     <section class="big-news-container">
        
           <div class="big-item1">
-            <a href="" class="big-link"><h3>We live in a Galaxy</h3></a>
+            <a href="" class="big-link">
+              <h3>We live in a Galaxy!</h3>
+               </a>
           </div>
             <div class="big-item2">
               <img class="big-image" src="images/kid-universe.jpg" alt=picture of a galaxy/>
