last fixes before pull request

--- a/code/index.html
+++ b/code/index.html
@@ -62,12 +62,12 @@
 
       <!-- Here starts the first article section -->
 
-      <section class="articles-container">
+      <section>
         <p class="article-header">Articles on the topic of:</p>
         <a class="article-header article-link" href="LÄNKSIDAN!"
           >Creative Processes</a>
 
-        <div class="row">
+        <div class="article-section">
           <div class="article yellow">
             <h4>The ideal female archetype</h4>
             <a href="link to article">
@@ -126,12 +126,12 @@
 
       <!-- Here starts the second article section -->
 
-      <section class="articles-container">
+      <section>
         <p class="article-header">Articles on the topic of:</p>
         <a class="article-header article-link" href="LÄNKSIDAN!"
           >Creative Processes</a>
 
-        <div class="row">
+        <div class="article-section">
           <div class="article darkgreen">
             <h4>Embodying the fashion pose</h4>
             <a href="link to article">
