Some last color changes

--- a/code/index.html
+++ b/code/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header>
-        <img src="images/elephant-15850.png" width="100px" alt="" class="logga">
-        <div class="meny"><button><img src="images/bars-solid.svg" width="30px" alt="" tabindex="1"></button>
+        <img src="images/elephant-15850.png" width="100px" alt="Logo" class="logga">
+        <div class="meny"><button><img src="images/bars-solid.svg" width="30px" alt="Menu"></button>
             <ul>
                 <a href="#"><li>POPULAR</li></a>
                 <a href="#"><li>LATEST NEWS</li></a>
@@ -32,7 +32,7 @@
     
     <section class="bigNews">
         <div class="part1">
-            <img src="images/animals.jpg" width="500px" alt="">
+            <img src="images/animals.jpg" width="500px" alt="Picture of animals">
         </div>
         <div class="part2">
             <h2>THE BIG ANIMAL FAMILY</h2>
@@ -42,35 +42,35 @@
         
     <div class="cards">
         <a href="#" class="card1">
-            <img src="images/fox.png" height="150px" alt="">
+            <img src="images/fox.png" height="150px" alt="Image of a fox">
             <p><b>Click to read more about Foxes</b></p>
         </a>
         <a href="#" class="card2">
-            <img src="images/cow.png" height="150px" alt="">
+            <img src="images/cow.png" height="150px" alt="Image of a cow">
             <p><b>Click to read more about Cows</b></p>
         </a>
         <a href="#" class="card3">
-            <img src="images/coala.png" height="150px" alt="">
+            <img src="images/coala.png" height="150px" alt="Image of a coala">
             <p><b>Click to read more about Coalas</b></p>
         </a>
         <a href="#" class="card4">
-            <img src="images/lion.png" width="150px" alt="">
+            <img src="images/lion.png" width="150px" alt="Image of a lion">
             <p><b>Click to read more about Lions</b></p>
         </a>
         <a href="#" class="card5">
-            <img src="images/tigers.png" width="150px" alt="">
+            <img src="images/tigers.png" width="150px" alt="Image of a tiger">
             <p><b>Click to read more about Tigers</b></p>
         </a>
         <a href="#" class="card6">
-            <img src="images/bear.png" height="150px" alt="">
+            <img src="images/bear.png" height="150px" alt="Image of a bear">
             <p><b>Click to read more about Bears</b></p>
         </a>
         <a href="#" class="card7">
-            <img src="images/lama.png" height="150px" alt="">
+            <img src="images/lama.png" height="150px" alt="Image of a alpaca">
             <p><b>Click to read more about Alpacas</b></p>
         </a>
         <a href="#" class="card8">
-            <img src="images/pig.png" height="150px" alt="">
+            <img src="images/pig.png" height="150px" alt="Image of a pig">
             <p><b>Click to read more about Pigs</b></p>
         </a>
     </div>
