Added different number of columns for different views etc

--- a/code/index.html
+++ b/code/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Project 2: The News Site</title>
+
+    <!-- Meta -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- meta tag for responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project 2: The News Site</title>
+    
+    <!-- CSS -->
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap"
       rel="stylesheet"
@@ -19,7 +22,7 @@
 
     <!-- Header -->
 
-    <header>
+    <header class="main-header">
       <!-- Lägger in fake logo så länge, ändra till riktig logga sen -->
       <div class="logo-container"><img src="./images/train_black_24dp.svg" /></div>
       <!-- För att ändra tillbaka till fejkloggan, lägg in:
@@ -45,6 +48,7 @@
         />
       </div>
       <article class="main-news big-news-child">
+        <h2>Här är huvudnyheten</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -61,7 +65,7 @@
 
     <section class="other-news">
       <article class="card">
-        <header>
+        <header class="card-header">
           <h2>Heading</h2>
         </header>
         <img
@@ -81,7 +85,7 @@
         </div>
       </article>
       <article class="card">
-        <header>
+        <header class="card-header">
           <h2>Heading</h2>
         </header>
         <img
@@ -101,7 +105,7 @@
         </div>
       </article>
       <article class="card">
-        <header>
+        <header class="card-header">
           <h2>Heading</h2>
         </header>
         <img
@@ -121,7 +125,7 @@
         </div>
       </article>
       <article class="card">
-        <header>
+        <header class="card-header">
           <h2>Heading</h2>
         </header>
         <img
@@ -141,7 +145,7 @@
         </div>
       </article>
       <article class="card">
-        <header>
+        <header class="card-header">
           <h2>Heading</h2>
         </header>
         <img
@@ -161,7 +165,7 @@
         </div>
       </article>
       <article class="card">
-        <header>
+        <header class="card-header">
           <h2>Heading</h2>
         </header>
         <img
@@ -181,7 +185,7 @@
         </div>
       </article>
       <article class="card">
-        <header>
+        <header class="card-header">
           <h2>Heading</h2>
         </header>
         <img
@@ -200,6 +204,36 @@
           </p>
         </div>
       </article>
+      <!-- 
+      <article class="card">
+        <header class="card-header">
+          <h2>Heading</h2>
+        </header>
+        <img
+          src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash-edited.jpg"
+          alt="train on a bridge"
+        />
+        <div class="other-news-content">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </article>
+     -->
     </section>
+
+    <!-- End other news -->
+
+    <!-- Footer -->
+
+    <footer>
+      <p>Copyright</p>
+    </footer>
   </body>
 </html>
